# ipcalc

./: .editorconfig  .gitignore  .gitlab-ci.yml  Makefile  NEWS  README.md  deaggregate.c  ipcalc-geoip.c  ipcalc-maxmind.c  ipcalc-reverse.c  ipcalc-utils.c  ipcalc.1  ipcalc.1.md  ipcalc.c  ipcalc.h  meson.build  netsplit.c  release.sh
tests/: 192.168.1.5-31  deaggregate-0.0.0.0-255.255.255.255  deaggregate-127.0.0.0-255.255.255.255  deaggregate-240.0.0.0-255.255.255.255  hostname-localhost-ipv4-json  ip-localhost-ipv4-json  ipcalc-testrunner.sh  meson.build  no-decorate-192.168.2.0-24  no-decorate-all-info-192.168.2.0-24  nsplit-192.168.5.0-31-32  run-coverage.sh  split-192.168.5.0-31-32
